--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,3 +1,9 @@
-<h1>Hello, world</h1>
-
-<%= @nome %>
+<div class="jumbotron">
+  <h1>Contact List</h1>
+  <p>
+    Manage your contacts in everywhere!
+  </p>
+  <p>
+    <%= link_to 'Make Your Register', new_user_path, class: 'btn btn-primary btn-lg' %>
+  </p>
+</div>
