--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,15 +1,15 @@
 <footer>
   <small>
-    <%= link_to 'Contact List. Todos os direitos reservados.', root_path %>
+    <%= link_to 'Contact List. All the rights reserved.', root_path %>
   </small>
 
   <nav>
     <ul>
       <li>
-        <%= link_to 'Sobre', '#' %>
+        <%= link_to 'About', sobre_path %>
       </li>
       <li>
-        <%= link_to 'Contato', '#' %>
+        <%= link_to 'Contact', contato_path %>
       </li>
     </ul>
   </nav>
