--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to 'Myapp', root_url, class: 'navbar-brand' %>
+      <%= link_to 'Contact List', root_url, class: 'navbar-brand' %>
     </div>
 
   <!-- Conteudo exibido em telas maiores e que serao escondidos em telas menores -->
@@ -16,7 +16,7 @@
     <ul class= "nav navbar-nav"> 
 
         <li class="active">
-          <a href="#">Nova Conta</a>
+          <%= link_to 'Sign-Up', new_user_path %>
         </li>
 
     </ul>
@@ -25,7 +25,7 @@
 
 
         <li>
-          <%= link_to 'Entrar', '#' %>
+          <%= link_to 'Sign-In', '#' %>
 
         </li>
 
