--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Myapp</title>
+    <title>ContactList</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -13,8 +13,18 @@
     <%= render 'layouts/header' %>
     
     <div class="container">
-      <%= yield %>
-      <%= render 'layouts/footer' %>
+      <% flash.each do |message_type, message| %>
+       <%= content_tag 'div', class: "alert alert-#{message_type} alert-dismissible", role: 'alert' do %>
+        <button type="button" class="close" data-dismiss="alert" aria=label="close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <%= message %>
+       <% end %>
+      <% end %>
+      
+       <%= yield %>
+
+       <%= render 'layouts/footer' %>
     </div>
 
   </body>
