--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,21 +14,38 @@
   <!-- Conteudo exibido em telas maiores e que serao escondidos em telas menores -->
   <div class="collapse navbar-collapse" id="expanded-menu">
     <ul class= "nav navbar-nav"> 
-
+      <% if !user_signed_in? %>
         <li class="active">
-          <%= link_to 'Sign-Up', new_user_path %>
+          <%= link_to 'Sign Up', new_user_path %>
         </li>
-
+      <% end %>
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
 
-
+      <%if !user_signed_in? %>
         <li>
-          <%= link_to 'Sign-In', '#' %>
-
+          <%= link_to 'Sign In', entrar_path %>
         </li>
-
+      <% else %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            Welcome, <%= current_user.name %> <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <%= link_to 'My Page', current_user %>
+            </li>
+            <li>
+              <%= link_to 'Edit', '#' %>
+            </li>
+            <li class="divider" role="separator"></li>
+            <li>
+              <%= link_to 'Log-Out', sair_path, method: :delete %>
+            </li>
+          </ul>
+        </li>
+      <% end %>  
     </ul>
 
   </div>
