relacionamento entre classes

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,7 +37,7 @@
               <%= link_to 'My Page', current_user %>
             </li>
             <li>
-              <%= link_to 'Edit', '#' %>
+              <%= link_to 'Edit', 'edit_user_path(current_user)' %>
             </li>
             <li class="divider" role="separator"></li>
             <li>
